<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/constraint_layout1"
        >


        <TextView
            android:id="@+id/NameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:padding="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/NameEditText"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/NameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:padding="16dp"
            android:inputType="textPersonName"
            android:hint="@string/type_name"
            app:layout_constraintTop_toBottomOf="@+id/NameTextView"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/surnameTextView" />

        <TextView
            android:id="@+id/surnameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/surname"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@+id/NameEditText"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/surnameEditText"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/surnameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:padding="16dp"
            android:inputType="textPersonName"
            android:hint="@string/type_surname"
            app:layout_constraintTop_toBottomOf="@+id/surnameTextView"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/numberOfMarksTextView" />

        <TextView
            android:id="@+id/numberOfMarksTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/number_of_marks"
            android:padding="16dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/surnameEditText"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/NumberOfMarksEditTextNumber"/>

        <EditText
            android:id="@+id/NumberOfMarksEditTextNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:padding="16dp"
            android:hint="@string/type_marks_5_15"
            android:inputType="number"
            app:layout_constraintTop_toBottomOf="@+id/numberOfMarksTextView"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/marksButton" />

        <Button
            android:id="@+id/marksButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/check"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="50dp"
            android:textSize="16sp"
            android:layout_marginBottom="30dp"
            app:layout_constraintTop_toBottomOf="@+id/NumberOfMarksEditTextNumber"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>